--- a/ml/cc/exercises/linear_regression_with_a_real_dataset.ipynb
+++ b/ml/cc/exercises/linear_regression_with_a_real_dataset.ipynb
@@ -799,7 +799,7 @@
         "\n",
         "# Define a synthetic feature\n",
         "training_df[\"rooms_per_person\"] = training_df[\"total_rooms\"] / training_df[\"population\"]\n",
-        "my_feature = \"rooms_per_person\"\n",
+        "my_feature = \"median_income\"\n",
         "\n",
         "# Tune the hyperparameters.\n",
         "learning_rate = 0.06\n",
